--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,38 @@
-<!doctype html><html lang="it"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Corso Front-End Development"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>Corso Front-End Development</title><script defer="defer" src="/static/js/main.b4a5c80b.js"></script><link href="/static/css/main.77a10ec5.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="it">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Corso Front-End Development">
+    <title>Corso Front-End Development</title>
+    <link rel="stylesheet" href="/style.css">
+</head>
+<body>
+    <div class="container">
+        <div class="header">
+            <h1>Corso Front-End Development</h1>
+            <p>Benvenuto al corso di sviluppo frontend</p>
+        </div>
+
+        <h2>Lezioni Disponibili</h2>
+
+        <div class="teoria">
+            <h3>Lezione 1 - HTML</h3>
+            <p>Fondamenti del linguaggio di markup per il web</p>
+            <ul>
+                <li><a href="/lezione-1/index.html">Introduzione alla Lezione 1</a></li>
+                <li><a href="/lezione-1/lezione-1-1.html">1.1 - Struttura Base HTML</a></li>
+                <li><a href="/lezione-1/lezione-1-2.html">1.2 - Form HTML</a></li>
+                <li><a href="/lezione-1/lezione-1-99.html">Storia del Web - Tim Berners-Lee</a></li>
+            </ul>
+
+            <h3>Lezione 2 - CSS</h3>
+            <p>Stili e presentazione delle pagine web</p>
+            <ul>
+                <li><a href="/lezione-2/lezione-1-3.html">2.1 - Introduzione a CSS</a></li>
+                <li><a href="/lezione-2/lezione-1-4.html">2.2 - Link Utili</a></li>
+            </ul>
+        </div>
+    </div>
+</body>
+</html>
