Revisione genrale della navigazione, Revisione della lezione 1 e 2, Bozza lezione 3

--- a/public/lezione-1/lezione-1-1.html
+++ b/public/lezione-1/lezione-1-1.html
@@ -13,6 +13,13 @@
             <p>Fondamenti del linguaggio di markup per il web</p>
         </div>
 
+        <div class="print-only">
+            <strong>Nota per la versione stampata:</strong> Questa lezione contiene esempi interattivi visualizzabili tramite iframe. 
+            Gli iframe non possono essere stampati per limitazioni tecniche dei browser. 
+            Per visualizzare gli esempi completi, consultare la versione online di questo documento.
+            I percorsi degli esempi sono indicati nelle sezioni corrispondenti.
+        </div>
+
         <h2>1. Introduzione ad HTML</h2>
         
         <div class="teoria">
@@ -413,8 +420,10 @@
         </div>
 
         <div class="nav">
-            <a href="lezione-1-0.html">Indietro</a>
-            <a href="lezione-1-2.html">Avanti</a>
+            <a href="index.html" class="btn-prev">Indietro</a>
+            <a href="/" class="btn-home">Home</a>
+            <a href="/link-utili.html" class="btn-link-utili">Link utili</a>
+            <a href="lezione-1-2.html" class="btn-next">Avanti</a>
         </div>
 
     </div>
