--- a/public/lezione-2/esempi/esempio-completo.html
+++ b/public/lezione-2/esempi/esempio-completo.html
@@ -200,7 +200,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Corso Web Frontend. Tutti i diritti riservati.</p>
+        <p>&copy; 2025 Corso Web Frontend.</p>
     </footer>
 </body>
 </html>
