--- a/public/lezione-2/lezione-2-1.html
+++ b/public/lezione-2/lezione-2-1.html
@@ -3,14 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lezione 1.3 - CSS Base</title>
-    <link rel="stylesheet" href="lezione-1.css">
+    <title>Lezione 2.1 - Fondamenti CSS</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <h1>Lezione 1.3 - CSS Base</h1>
-            <p>Cascading Style Sheets: Fondamenti dello styling web</p>
+            <h1>Lezione 2.1 - Fondamenti CSS</h1>
+            <p>Cascading Style Sheets: Sintassi, Selettori e Proprietà Base</p>
+        </div>
+
+        <div class="print-only">
+            <strong>Nota per la versione stampata:</strong> Questa lezione contiene esempi interattivi visualizzabili tramite iframe. 
+            Gli iframe non possono essere stampati per limitazioni tecniche dei browser. 
+            Per visualizzare gli esempi completi, consultare la versione online di questo documento.
+            I percorsi degli esempi sono indicati nelle sezioni corrispondenti.
         </div>
 
         <h2>1. Introduzione a CSS</h2>
@@ -85,7 +92,7 @@ p {
         </div>
 
         <div class="esempio">
-            <iframe src="esempi_1-3/sintassi-css.html" width="100%" height="350" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
+            <iframe src="esempi/sintassi-css.html" width="100%" height="350" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Sintassi CSS</p>
         </div>
 
@@ -161,7 +168,7 @@ nav > ul {
         </div>
 
         <div class="esempio">
-            <iframe src="esempi_1-3/selettori-css.html" width="100%" height="400" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
+            <iframe src="esempi/selettori-css.html" width="100%" height="400" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Selettori CSS</p>
         </div>
 
@@ -283,7 +290,7 @@ opacity: 0.5;            /* da 0 (trasparente) a 1 (opaco) */</pre>
         </div>
 
         <div class="esempio">
-            <iframe src="esempi_1-3/proprieta-css.html" width="100%" height="400" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
+            <iframe src="esempi/proprieta-css.html" width="100%" height="400" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Proprietà CSS Fondamentali</p>
         </div>
 
@@ -308,7 +315,7 @@ z-index: 10;</pre>
         </div>
 
         <div class="esempio">
-            <iframe src="esempi_1-3/posizionamento.html" width="100%" height="500" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
+            <iframe src="esempi/posizionamento.html" width="100%" height="500" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Posizionamento CSS</p>
         </div>
 
@@ -337,7 +344,7 @@ z-index: 10;</pre>
         </div>
 
         <div class="esempio">
-            <iframe src="esempi_1-3/flexbox.html" width="100%" height="600" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
+            <iframe src="esempi/flexbox.html" width="100%" height="600" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Flexbox Base</p>
         </div>
 
@@ -406,7 +413,7 @@ z-index: 10;</pre>
         </div>
 
         <div class="esempio">
-            <iframe src="esempi_1-3/grid.html" width="100%" height="900" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
+            <iframe src="esempi/grid.html" width="100%" height="900" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: CSS Grid Layout</p>
         </div>
 
@@ -457,7 +464,7 @@ p::first-letter {
         </div>
 
         <div class="esempio">
-            <iframe src="esempi_1-3/pseudo-classi.html" width="100%" height="500" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
+            <iframe src="esempi/pseudo-classi.html" width="100%" height="500" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Pseudo-classi e Pseudo-elementi</p>
         </div>
 
@@ -516,7 +523,7 @@ p::first-letter {
         </div>
 
         <div class="esempio">
-            <iframe src="esempi_1-3/variabili-css.html" width="100%" height="900" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
+            <iframe src="esempi/variabili-css.html" width="100%" height="900" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Variabili CSS</p>
         </div>
 
@@ -655,7 +662,7 @@ p::first-letter {
         </div>
 
         <div class="esempio">
-            <iframe src="esempi_1-3/media-query.html" width="100%" height="1000" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
+            <iframe src="esempi/media-query.html" width="100%" height="1000" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Media Query - Responsive e Stampa</p>
         </div>
 
@@ -915,13 +922,22 @@ body {
         </div>
 
         <div class="esempio">
-            <iframe src="esempi_1-3/esempio-completo.html" width="100%" height="600" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
+            <iframe src="esempi/esempio-completo.html" width="100%" height="600" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Pagina Stilizzata Completa</p>
         </div>
 
+        <h2>Conclusione</h2>
+
+        <div class="teoria">
+            <p>In questa lezione abbiamo coperto i fondamenti di CSS: sintassi, metodi di inserimento, selettori, proprietà fondamentali, posizionamento, Flexbox, Grid, pseudo-classi, variabili CSS e media query per layout responsive e stampa.</p>
+            <p>Questi concetti costituiscono le basi per creare interfacce web moderne, responsive e accessibili.</p>
+        </div>
+
         <div class="nav">
-            <a href="lezione-1-2.html">Indietro</a>
-            <a href="lezione-1-4.html">Avanti</a>
+            <a href="index.html" class="btn-prev">Indietro</a>
+            <a href="/" class="btn-home">Home</a>
+            <a href="/link-utili.html" class="btn-link-utili">Link utili</a>
+            <a href="lezione-2-99.html" class="btn-next">Avanti</a>
         </div>
 
     </div>
