--- a/public/lezione-2/lezione-2-99.html
+++ b/public/lezione-2/lezione-2-99.html
@@ -448,9 +448,14 @@
         <p><a href="https://it.wikipedia.org/wiki/Tim_Berners-Lee" target="_blank">https://it.wikipedia.org/wiki/Tim_Berners-Lee</a></p>
         <p style="margin-top: 20px;">Pagina creata come esempio didattico per il corso di Web Frontend</p>
         <p>&copy; 2025 - Esempio di pagina web con HTML e CSS</p>
-        <p style="margin-top: 20px;">
-            <a href="lezione-1-4.html" style="color: white; text-decoration: underline;">← Torna alle lezioni</a>
-        </p>
     </footer>
+
+    <div style="max-width: 1000px; margin: 0 auto; padding: 20px;">
+        <div class="nav">
+            <a href="lezione-2-1.html" class="btn-prev">Indietro</a>
+            <a href="/" class="btn-home">Home</a>
+            <a href="/link-utili.html" class="btn-link-utili">Link utili</a>
+        </div>
+    </div>
 </body>
 </html>
