--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
             <p>Benvenuto al corso di sviluppo frontend</p>
         </div>
 
-        <h2>Lezioni Disponibili</h2>
+        <h2>Lezioni</h2>
 
         <div class="teoria">
             <h3>Lezione 1 - HTML</h3>
@@ -23,14 +23,41 @@
                 <li><a href="/lezione-1/index.html">Introduzione alla Lezione 1</a></li>
                 <li><a href="/lezione-1/lezione-1-1.html">1.1 - Struttura Base HTML</a></li>
                 <li><a href="/lezione-1/lezione-1-2.html">1.2 - Form HTML</a></li>
-                <li><a href="/lezione-1/lezione-1-99.html">Storia del Web - Tim Berners-Lee</a></li>
+                <li><a href="/lezione-1/lezione-1-99.html">Pagina di esempio</a></li>
             </ul>
+        </div>
 
+        <div class="teoria">
             <h3>Lezione 2 - CSS</h3>
             <p>Stili e presentazione delle pagine web</p>
             <ul>
-                <li><a href="/lezione-2/lezione-1-3.html">2.1 - Introduzione a CSS</a></li>
-                <li><a href="/lezione-2/lezione-1-4.html">2.2 - Link Utili</a></li>
+                <li><a href="/lezione-2/index.html">Introduzione alla Lezione 2</a></li>
+                <li><a href="/lezione-2/lezione-2-1.html">2.1 - Introduzione a CSS</a></li>
+                <li><a href="/lezione-2/lezione-2-99.html">Pagina di esempio</a></li>
+            </ul>
+        </div>
+
+        <div class="teoria">
+            <h3>Lezione 3 - Bootstrap</h3>
+            <p>Framework CSS per sviluppo web responsive</p>
+            <ul>
+                <li><a href="/lezione-3/index.html">Introduzione alla Lezione 3</a></li>
+                <li><a href="/lezione-3/lezione-3-1.html">3.1 - Introduzione e Setup Bootstrap</a></li>
+                <li><a href="/lezione-3/lezione-3-2.html">3.2 - Grid System</a></li>
+                <li><a href="/lezione-3/lezione-3-3.html">3.3 - Typography e Utilities</a></li>
+                <li><a href="/lezione-3/lezione-3-4.html">3.4 - Componenti Base</a></li>
+                <li><a href="/lezione-3/lezione-3-5.html">3.5 - Componenti Navigazione</a></li>
+                <li><a href="/lezione-3/lezione-3-6.html">3.6 - Componenti Form</a></li>
+                <li><a href="/lezione-3/lezione-3-7.html">3.7 - Componenti Avanzati</a></li>
+                <li><a href="/lezione-3/lezione-3-8.html">3.8 - Customizzazione Bootstrap</a></li>
+                <li><a href="/lezione-3/lezione-3-99.html">3.99 - Progetto Completo (Landing Page)</a></li>
+            </ul>
+        </div>
+
+        <div class="teoria">
+            <h3>Risorse</h3>
+            <ul>
+                <li><a href="/link-utili.html">Link Utili</a></li>
             </ul>
         </div>
     </div>
