--- a/public/lezione-1/lezione-1-2.html
+++ b/public/lezione-1/lezione-1-2.html
@@ -15,6 +15,13 @@
             <p>Elementi e componenti dei moduli web</p>
         </div>
 
+        <div class="print-only">
+            <strong>Nota per la versione stampata:</strong> Questa lezione contiene esempi interattivi visualizzabili tramite iframe. 
+            Gli iframe non possono essere stampati per limitazioni tecniche dei browser. 
+            Per visualizzare gli esempi completi, consultare la versione online di questo documento.
+            I percorsi degli esempi sono indicati nelle sezioni corrispondenti.
+        </div>
+
         <h2>1. Cosa sono i Form HTML</h2>
 
         <div class="teoria">
@@ -420,7 +427,7 @@
         </div>
 
         <div class="teoria">
-            <p><strong>Nota:</strong> Per approfondire come stilizzare i form con le pseudo-classi CSS (<code>:valid</code>, <code>:invalid</code>, ecc.), consulta la <a href="lezione-1-3.html">Lezione 1.3 - CSS Base</a>.</p>
+            <p><strong>Nota:</strong> Per approfondire come stilizzare i form con le pseudo-classi CSS (<code>:valid</code>, <code>:invalid</code>, ecc.), consulta la <a href="/lezione-2/lezione-2-1.html">Lezione 2.1 - CSS Base</a>.</p>
         </div>
 
         <h2>6. Metodi HTTP: GET vs POST</h2>
@@ -679,8 +686,10 @@
         </div>
 
         <div class="nav">
-            <a href="lezione-1-1.html">Indietro</a>
-            <a href="lezione-1-3.html">Avanti</a>
+            <a href="lezione-1-1.html" class="btn-prev">Indietro</a>
+            <a href="/" class="btn-home">Home</a>
+            <a href="/link-utili.html" class="btn-link-utili">Link utili</a>
+            <a href="lezione-1-99.html" class="btn-next">Avanti</a>
         </div>
     </div>
 </body>
