--- a/public/link-utili.html
+++ b/public/link-utili.html
@@ -3,63 +3,107 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lezione 1.4 - Link Utili</title>
+    <title>Link Utili</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <h1>Lezione 1.4 - Link Utili</h1>
+            <h1>Link Utili</h1>
             <p>Risorse e strumenti per lo sviluppo web frontend</p>
         </div>
 
         <div class="teoria">
-            <p>Questa sezione raccoglie una serie di risorse online fondamentali per lo sviluppo web. Questi strumenti ti aiuteranno a scrivere codice migliore, validare il tuo lavoro, trovare ispirazione e risolvere problemi comuni.</p>
+            <p>Questa sezione raccoglie una serie di risorse online fondamentali per lo sviluppo web, organizzate per argomento delle lezioni del corso. Questi strumenti ti aiuteranno a scrivere codice migliore, validare il tuo lavoro, trovare ispirazione e risolvere problemi comuni.</p>
         </div>
 
-        <h2>1. Documentazione e Reference</h2>
+        <h2>Risorse HTML (Lezione 1)</h2>
 
-        <h3>1.1 HTML & CSS</h3>
+        <h3>Documentazione HTML</h3>
         <ul>
-            <li><a href="https://developer.mozilla.org/it/" target="_blank">MDN Web Docs</a> - La documentazione più completa e affidabile per HTML, CSS e JavaScript</li>
-            <li><a href="https://www.w3schools.com/" target="_blank">W3Schools</a> - Tutorial ed esempi pratici per principianti</li>
+            <li><a href="https://developer.mozilla.org/it/docs/Web/HTML" target="_blank">MDN Web Docs - HTML</a> - La documentazione più completa e affidabile per HTML</li>
+            <li><a href="https://www.w3schools.com/html/" target="_blank">W3Schools HTML Tutorial</a> - Tutorial ed esempi pratici per principianti</li>
+            <li><a href="https://html.spec.whatwg.org/" target="_blank">HTML Living Standard</a> - Specifica HTML aggiornata continuamente</li>
+        </ul>
+
+        <h3>Validazione HTML</h3>
+        <ul>
+            <li><a href="https://validator.w3.org/" target="_blank">W3C HTML Validator</a> - Valida il markup HTML</li>
+        </ul>
+
+        <h2>Risorse CSS (Lezione 2)</h2>
+
+        <h3>Documentazione CSS</h3>
+        <ul>
+            <li><a href="https://developer.mozilla.org/it/docs/Web/CSS" target="_blank">MDN Web Docs - CSS</a> - Documentazione completa per CSS</li>
+            <li><a href="https://www.w3schools.com/css/" target="_blank">W3Schools CSS Tutorial</a> - Tutorial CSS per principianti</li>
             <li><a href="https://css-tricks.com/" target="_blank">CSS-Tricks</a> - Guide, articoli e soluzioni CSS avanzate</li>
+            <li><a href="https://www.w3.org/Style/CSS/" target="_blank">CSS Specifications</a> - Tutte le specifiche CSS ufficiali</li>
+        </ul>
+
+        <h3>Esercizi Interattivi CSS</h3>
+        <ul>
+            <li><a href="https://flexboxfroggy.com/" target="_blank">Flexbox Froggy</a> - Gioco per imparare Flexbox</li>
+            <li><a href="https://cssgridgarden.com/" target="_blank">Grid Garden</a> - Gioco per imparare CSS Grid</li>
+        </ul>
+
+        <h3>Validazione CSS</h3>
+        <ul>
+            <li><a href="https://jigsaw.w3.org/css-validator/" target="_blank">W3C CSS Validator</a> - Valida il codice CSS</li>
+        </ul>
+
+        <h2>Risorse Bootstrap (Lezione 3)</h2>
+
+        <h3>Documentazione Bootstrap</h3>
+        <ul>
+            <li><a href="https://getbootstrap.com/" target="_blank">Bootstrap Official Website</a> - Sito ufficiale Bootstrap</li>
+            <li><a href="https://getbootstrap.com/docs/5.3/getting-started/introduction/" target="_blank">Bootstrap 5 Documentation</a> - Documentazione completa</li>
+            <li><a href="https://getbootstrap.com/docs/5.3/examples/" target="_blank">Bootstrap Examples</a> - Esempi ufficiali</li>
+            <li><a href="https://icons.getbootstrap.com/" target="_blank">Bootstrap Icons</a> - Libreria icone ufficiale</li>
+        </ul>
+
+        <h3>Strumenti Bootstrap</h3>
+        <ul>
+            <li><a href="https://www.layoutit.com/bootstrap5" target="_blank">Layoutit - Bootstrap Builder</a> - Costruttore visuale Bootstrap</li>
+            <li><a href="https://bootswatch.com/" target="_blank">Bootswatch - Free Themes</a> - Temi gratuiti per Bootstrap</li>
+        </ul>
+
+        <h2>Risorse Generali</h2>
+
+        <h3>Documentazione e Reference</h3>
+        <ul>
+            <li><a href="https://www.w3.org/" target="_blank">W3C (World Wide Web Consortium)</a> - Standard web ufficiali</li>
             <li><a href="https://web.dev/" target="_blank">web.dev by Google</a> - Best practices e guide moderne per lo sviluppo web</li>
             <li><a href="https://caniuse.com/" target="_blank">Can I Use</a> - Verifica la compatibilità delle funzionalità CSS/HTML nei vari browser</li>
         </ul>
 
-        <h3>1.2 Specifiche Ufficiali</h3>
-        <ul>
-            <li><a href="https://www.w3.org/" target="_blank">W3C (World Wide Web Consortium)</a> - Standard web ufficiali</li>
-            <li><a href="https://html.spec.whatwg.org/" target="_blank">HTML Living Standard</a> - Specifica HTML aggiornata continuamente</li>
-            <li><a href="https://www.w3.org/Style/CSS/" target="_blank">CSS Specifications</a> - Tutte le specifiche CSS</li>
-        </ul>
+        <h2>Testing e Performance</h2>
 
-        <h2>2. Validatori e Testing</h2>
-
-        <h3>2.1 Validazione Codice</h3>
+        <h3>Accessibilità</h3>
         <ul>
-            <li><a href="https://validator.w3.org/" target="_blank">W3C HTML Validator</a> - Valida il markup HTML</li>
-            <li><a href="https://jigsaw.w3.org/css-validator/" target="_blank">W3C CSS Validator</a> - Valida il codice CSS</li>
             <li><a href="https://wave.webaim.org/" target="_blank">WAVE Web Accessibility</a> - Valuta l'accessibilità del sito</li>
+            <li><a href="https://www.w3.org/WAI/WCAG21/quickref/" target="_blank">WCAG Quick Reference</a> - Linee guida accessibilità W3C</li>
+            <li><a href="https://webaim.org/" target="_blank">WebAIM</a> - Risorse per accessibilità web</li>
+            <li><a href="https://www.a11yproject.com/" target="_blank">A11Y Project</a> - Checklist e risorse accessibilità</li>
+            <li><a href="https://contrast-ratio.com/" target="_blank">Contrast Ratio</a> - Verifica contrasto colori per accessibilità</li>
         </ul>
 
-        <h3>2.2 Performance e SEO</h3>
+        <h3>Performance e SEO</h3>
         <ul>
             <li><a href="https://pagespeed.web.dev/" target="_blank">PageSpeed Insights</a> - Analizza le performance del sito</li>
             <li><a href="https://web.dev/measure/" target="_blank">Lighthouse</a> - Audit completo: performance, accessibilità, SEO, best practices</li>
             <li><a href="https://gtmetrix.com/" target="_blank">GTmetrix</a> - Test di velocità e performance dettagliati</li>
         </ul>
 
-        <h3>2.3 Responsiveness</h3>
+        <h3>Responsiveness</h3>
         <ul>
             <li><a href="https://responsivedesignchecker.com/" target="_blank">Responsive Design Checker</a> - Testa il sito su diverse risoluzioni</li>
             <li><a href="https://www.browserstack.com/" target="_blank">BrowserStack</a> - Testa su browser e dispositivi reali (a pagamento)</li>
         </ul>
 
-        <h2>3. Colori e Design</h2>
+        <h2>Design e Colori</h2>
 
-        <h3>3.1 Palette di Colori</h3>
+        <h3>Palette di Colori</h3>
         <ul>
             <li><a href="https://coolors.co/" target="_blank">Coolors</a> - Generatore di palette colori veloce e intuitivo</li>
             <li><a href="https://color.adobe.com/" target="_blank">Adobe Color</a> - Crea palette basate su teoria dei colori</li>
@@ -68,14 +112,14 @@
             <li><a href="https://flatuicolors.com/" target="_blank">Flat UI Colors</a> - Palette colori flat design</li>
         </ul>
 
-        <h3>3.2 Gradienti</h3>
+        <h3>Gradienti</h3>
         <ul>
             <li><a href="https://cssgradient.io/" target="_blank">CSS Gradient</a> - Generatore di gradienti CSS</li>
             <li><a href="https://uigradients.com/" target="_blank">uiGradients</a> - Collezione di gradienti pronti all'uso</li>
             <li><a href="https://www.grabient.com/" target="_blank">Grabient</a> - Gradienti bellissimi con codice CSS</li>
         </ul>
 
-        <h3>3.3 Ispirazione Design</h3>
+        <h3>Ispirazione Design</h3>
         <ul>
             <li><a href="https://dribbble.com/" target="_blank">Dribbble</a> - Community di designer con showcase di progetti</li>
             <li><a href="https://www.behance.net/" target="_blank">Behance</a> - Portfolio e progetti creativi</li>
@@ -83,9 +127,9 @@
             <li><a href="https://www.siteinspire.com/" target="_blank">SiteInspire</a> - Galleria di web design ispiratori</li>
         </ul>
 
-        <h2>4. Tipografia</h2>
+        <h2>Tipografia e Font</h2>
 
-        <h3>4.1 Font</h3>
+        <h3>Font</h3>
         <ul>
             <li><a href="https://fonts.google.com/" target="_blank">Google Fonts</a> - Libreria gratuita di font web</li>
             <li><a href="https://www.fontpair.co/" target="_blank">FontPair</a> - Suggerimenti per abbinamenti di font</li>
@@ -93,7 +137,7 @@
             <li><a href="https://fonts.adobe.com/" target="_blank">Adobe Fonts</a> - Font professionali (richiede abbonamento Adobe)</li>
         </ul>
 
-        <h3>4.2 Icone e Simboli</h3>
+        <h3>Icone e Simboli</h3>
         <ul>
             <li><a href="https://fontawesome.com/" target="_blank">Font Awesome</a> - Libreria icone più popolare</li>
             <li><a href="https://icons8.com/" target="_blank">Icons8</a> - Icone, illustrazioni e foto</li>
@@ -102,9 +146,9 @@
             <li><a href="https://feathericons.com/" target="_blank">Feather Icons</a> - Icone minimaliste e pulite</li>
         </ul>
 
-        <h2>5. Immagini e Media</h2>
+        <h2>Immagini e Media</h2>
 
-        <h3>5.1 Foto Stock Gratuite</h3>
+        <h3>Foto Stock Gratuite</h3>
         <ul>
             <li><a href="https://unsplash.com/" target="_blank">Unsplash</a> - Foto ad alta risoluzione gratuite</li>
             <li><a href="https://www.pexels.com/" target="_blank">Pexels</a> - Foto e video gratuiti</li>
@@ -112,16 +156,22 @@
             <li><a href="https://www.freepik.com/" target="_blank">Freepik</a> - Risorse grafiche gratuite e premium</li>
         </ul>
 
-        <h3>5.2 Ottimizzazione Immagini</h3>
+        <h3>Ottimizzazione Immagini</h3>
         <ul>
             <li><a href="https://tinypng.com/" target="_blank">TinyPNG</a> - Compressione immagini PNG e JPEG</li>
             <li><a href="https://squoosh.app/" target="_blank">Squoosh</a> - Compressore immagini di Google</li>
             <li><a href="https://compressor.io/" target="_blank">Compressor.io</a> - Compressione online veloce</li>
         </ul>
 
-        <h2>6. Generatori CSS</h2>
+        <h3>Placeholder</h3>
+        <ul>
+            <li><a href="https://placeholder.com/" target="_blank">Placeholder.com</a> - Immagini placeholder</li>
+            <li><a href="https://picsum.photos/" target="_blank">Lorem Picsum</a> - Immagini random per prototipi</li>
+        </ul>
 
-        <h3>6.1 Layout e Box</h3>
+        <h2>Generatori CSS</h2>
+
+        <h3>Layout e Box</h3>
         <ul>
             <li><a href="https://cssgrid-generator.netlify.app/" target="_blank">CSS Grid Generator</a> - Generatore visuale per CSS Grid</li>
             <li><a href="https://flexbox.malven.co/" target="_blank">Flexbox Cheatsheet</a> - Guida visuale a Flexbox</li>
@@ -129,30 +179,30 @@
             <li><a href="https://9elements.github.io/fancy-border-radius/" target="_blank">Fancy Border Radius</a> - Generatore bordi arrotondati complessi</li>
         </ul>
 
-        <h3>6.2 Ombre e Effetti</h3>
+        <h3>Ombre e Effetti</h3>
         <ul>
             <li><a href="https://cssgenerator.org/box-shadow-css-generator.html" target="_blank">Box Shadow Generator</a> - Crea ombre per box</li>
             <li><a href="https://neumorphism.io/" target="_blank">Neumorphism.io</a> - Generatore stile neumorphic</li>
             <li><a href="https://glassmorphism.com/" target="_blank">Glassmorphism</a> - Effetti vetro per UI moderne</li>
         </ul>
 
-        <h3>6.3 Animazioni</h3>
+        <h3>Animazioni</h3>
         <ul>
             <li><a href="https://animista.net/" target="_blank">Animista</a> - Libreria di animazioni CSS pronte</li>
             <li><a href="https://animate.style/" target="_blank">Animate.css</a> - Libreria animazioni CSS cross-browser</li>
             <li><a href="https://cubic-bezier.com/" target="_blank">Cubic Bezier</a> - Visualizzatore timing functions</li>
         </ul>
 
-        <h2>7. Strumenti per Sviluppatori</h2>
+        <h2>Strumenti per Sviluppatori</h2>
 
-        <h3>7.1 Editor Online</h3>
+        <h3>Editor Online</h3>
         <ul>
             <li><a href="https://codepen.io/" target="_blank">CodePen</a> - Playground per HTML, CSS, JavaScript</li>
             <li><a href="https://jsfiddle.net/" target="_blank">JSFiddle</a> - Editor e test online</li>
             <li><a href="https://codesandbox.io/" target="_blank">CodeSandbox</a> - IDE online per progetti completi</li>
         </ul>
 
-        <h3>7.2 Estensioni Browser Utili</h3>
+        <h3>Estensioni Browser Utili</h3>
         <ul>
             <li><strong>Web Developer</strong> - Toolbar con strumenti per sviluppatori</li>
             <li><strong>Wappalyzer</strong> - Identifica tecnologie usate su un sito</li>
@@ -161,23 +211,23 @@
             <li><strong>Lighthouse</strong> - Audit performance e best practices</li>
         </ul>
 
-        <h3>7.3 Version Control</h3>
+        <h3>Version Control</h3>
         <ul>
             <li><a href="https://github.com/" target="_blank">GitHub</a> - Hosting repository Git più popolare</li>
             <li><a href="https://gitlab.com/" target="_blank">GitLab</a> - Piattaforma DevOps completa</li>
             <li><a href="https://bitbucket.org/" target="_blank">Bitbucket</a> - Hosting Git di Atlassian</li>
         </ul>
 
-        <h2>8. Community e Apprendimento</h2>
+        <h2>Community e Apprendimento</h2>
 
-        <h3>8.1 Forum e Q&A</h3>
+        <h3>Forum e Q&A</h3>
         <ul>
             <li><a href="https://stackoverflow.com/" target="_blank">Stack Overflow</a> - Community Q&A per programmatori</li>
             <li><a href="https://www.reddit.com/r/webdev/" target="_blank">r/webdev</a> - Subreddit dedicato allo sviluppo web</li>
             <li><a href="https://dev.to/" target="_blank">DEV Community</a> - Piattaforma per sviluppatori</li>
         </ul>
 
-        <h3>8.2 Tutorial e Corsi</h3>
+        <h3>Tutorial e Corsi</h3>
         <ul>
             <li><a href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp</a> - Corsi gratuiti di programmazione</li>
             <li><a href="https://www.codecademy.com/" target="_blank">Codecademy</a> - Corsi interattivi (gratis e premium)</li>
@@ -185,41 +235,29 @@
             <li><a href="https://www.udemy.com/" target="_blank">Udemy</a> - Marketplace corsi online</li>
         </ul>
 
-        <h3>8.3 Newsletter e Blog</h3>
+        <h3>Newsletter e Blog</h3>
         <ul>
             <li><a href="https://css-weekly.com/" target="_blank">CSS Weekly</a> - Newsletter settimanale su CSS</li>
             <li><a href="https://frontendfoc.us/" target="_blank">Frontend Focus</a> - Newsletter frontend development</li>
             <li><a href="https://www.smashingmagazine.com/" target="_blank">Smashing Magazine</a> - Articoli e guide per web designer</li>
         </ul>
 
-        <h2>9. Accessibilità</h2>
+        <h2>Altro</h2>
 
-        <h3>9.1 Linee Guida e Testing</h3>
+        <h3>Framework CSS</h3>
         <ul>
-            <li><a href="https://www.w3.org/WAI/WCAG21/quickref/" target="_blank">WCAG Quick Reference</a> - Linee guida accessibilità W3C</li>
-            <li><a href="https://webaim.org/" target="_blank">WebAIM</a> - Risorse per accessibilità web</li>
-            <li><a href="https://www.a11yproject.com/" target="_blank">A11Y Project</a> - Checklist e risorse accessibilità</li>
-            <li><a href="https://contrast-ratio.com/" target="_blank">Contrast Ratio</a> - Verifica contrasto colori per accessibilità</li>
-        </ul>
-
-        <h2>10. Librerie e Framework CSS</h2>
-
-        <h3>10.1 Framework CSS Popolari</h3>
-        <ul>
-            <li><a href="https://getbootstrap.com/" target="_blank">Bootstrap</a> - Framework CSS più popolare</li>
             <li><a href="https://tailwindcss.com/" target="_blank">Tailwind CSS</a> - Framework utility-first moderno</li>
             <li><a href="https://bulma.io/" target="_blank">Bulma</a> - Framework CSS moderno basato su Flexbox</li>
             <li><a href="https://get.foundation/" target="_blank">Foundation</a> - Framework responsive professionale</li>
         </ul>
 
-        <h3>10.2 Reset e Normalize</h3>
+        <h3>Reset e Normalize CSS</h3>
         <ul>
             <li><a href="https://necolas.github.io/normalize.css/" target="_blank">Normalize.css</a> - Reset CSS moderno</li>
             <li><a href="https://meyerweb.com/eric/tools/css/reset/" target="_blank">CSS Reset</a> - Reset CSS di Eric Meyer</li>
         </ul>
 
-        <h2>11. Cheat Sheets</h2>
-
+        <h3>Cheat Sheets</h3>
         <ul>
             <li><a href="https://htmlcheatsheet.com/" target="_blank">HTML Cheat Sheet</a> - Riferimento rapido HTML</li>
             <li><a href="https://htmlcheatsheet.com/css/" target="_blank">CSS Cheat Sheet</a> - Riferimento rapido CSS</li>
@@ -227,13 +265,10 @@
             <li><a href="https://flexbox.malven.co/" target="_blank">Flexbox Cheat Sheet</a> - Guida rapida Flexbox</li>
         </ul>
 
-        <h2>12. Placeholder e Lorem Ipsum</h2>
-
+        <h3>Lorem Ipsum e Testo Placeholder</h3>
         <ul>
             <li><a href="https://www.lipsum.com/" target="_blank">Lorem Ipsum Generator</a> - Generatore testo placeholder</li>
             <li><a href="https://www.blindtextgenerator.com/" target="_blank">Blind Text Generator</a> - Testo segnaposto multilingua</li>
-            <li><a href="https://placeholder.com/" target="_blank">Placeholder.com</a> - Immagini placeholder</li>
-            <li><a href="https://picsum.photos/" target="_blank">Lorem Picsum</a> - Immagini random per prototipi</li>
         </ul>
 
         <div class="teoria" style="margin-top: 40px; background-color: #e8f5e9; border-left-color: #4caf50;">
@@ -243,8 +278,7 @@
         </div>
 
         <div class="nav">
-            <a href="lezione-1-3.html">Indietro</a>
-            <a href="lezione-1-99.html">Avanti</a>
+            <a href="/" class="btn-home">Home</a>
         </div>
 
     </div>
