Revisione lezione 2 e revisione lezione 3

--- a/public/lezione-3/lezione-3-1.html
+++ b/public/lezione-3/lezione-3-1.html
@@ -308,7 +308,7 @@ import Dropdown from 'bootstrap/js/dist/dropdown';</pre>
     &lt;!-- Footer --&gt;
     &lt;footer class="bg-dark text-white text-center py-3 mt-5"&gt;
         &lt;div class="container"&gt;
-            &lt;p class="mb-0"&gt;&amp;copy; 2024 Il Mio Sito - Powered by Bootstrap 5&lt;/p&gt;
+            &lt;p class="mb-0"&gt;&amp;copy; 2025 Il Mio Sito - Powered by Bootstrap 5&lt;/p&gt;
         &lt;/div&gt;
     &lt;/footer&gt;
     
@@ -405,6 +405,7 @@ import Dropdown from 'bootstrap/js/dist/dropdown';</pre>
         <div class="esempio">
             <iframe src="esempi/setup-bootstrap.html" width="100%" height="600" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Prima pagina Bootstrap completa - Ridimensiona per vedere il comportamento responsive</p>
+            <p class="no-print" style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/setup-bootstrap.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/setup-bootstrap.html</a></p>
         </div>
 
         <h2>10. Best Practices e Consigli</h2>
