--- a/public/lezione-3/lezione-3-4.html
+++ b/public/lezione-3/lezione-3-4.html
@@ -650,6 +650,7 @@
         <div class="esempio">
             <iframe src="esempi/componenti-base.html" width="100%" height="900" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Tutti i componenti base di Bootstrap</p>
+            <p class="no-print" style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/componenti-base.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/componenti-base.html</a></p>
         </div>
 
         <h2>7. Best Practices</h2>
