--- a/public/lezione-3/lezione-3-2.html
+++ b/public/lezione-3/lezione-3-2.html
@@ -611,7 +611,7 @@
         &lt;div class="container"&gt;
             &lt;div class="row"&gt;
                 &lt;div class="col-md-6"&gt;
-                    &lt;p&gt;&amp;copy; 2024 Il Mio Sito&lt;/p&gt;
+                    &lt;p&gt;&amp;copy; 2025 Il Mio Sito&lt;/p&gt;
                 &lt;/div&gt;
                 &lt;div class="col-md-6 text-md-end"&gt;
                     &lt;p&gt;Contatti | Privacy&lt;/p&gt;
@@ -628,6 +628,7 @@
         <div class="esempio">
             <iframe src="esempi/grid-system.html" width="100%" height="800" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Grid System completo - Ridimensiona per vedere i breakpoints</p>
+            <p class="no-print" style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/grid-system.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/grid-system.html</a></p>
         </div>
 
         <h2>14. Best Practices</h2>
