--- a/public/lezione-3/lezione-3-6.html
+++ b/public/lezione-3/lezione-3-6.html
@@ -632,6 +632,7 @@
         <div class="esempio">
             <iframe src="esempi/form-completo.html" width="100%" height="900" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
             <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Form Bootstrap completo con validazione</p>
+            <p class="no-print" style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/form-completo.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/form-completo.html</a></p>
         </div>
 
         <h2>8. Best Practices</h2>
