--- a/public/lezione-3/lezione-3-8.html
+++ b/public/lezione-3/lezione-3-8.html
@@ -554,8 +554,9 @@ h1, h2, h3, h4, h5, h6 {
         <h2>6. Esempio Tema Completo</h2>
 
         <div class="esempio">
-            <iframe src="esempi/custom-theme.html" width="100%" height="800" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
-            <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Bootstrap con tema personalizzato</p>
+            <iframe src="esempi/custom-theme.html" width="100%" height="900" style="border: 1px solid #ddd; border-radius: 4px;"></iframe>
+            <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Esempio: Pagina con tema personalizzato usando variabili CSS</p>
+            <p class="no-print" style="text-align: center; margin-top: 5px; font-size: 12px;"><a href="esempi/custom-theme.html" target="_blank" style="color: #0066cc; text-decoration: none;">esempi/custom-theme.html</a></p>
         </div>
 
         <h2>7. Best Practices per Customizzazione</h2>
