--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
                 <li><a href="/lezione-3/lezione-3-6.html">3.6 - Componenti Form</a></li>
                 <li><a href="/lezione-3/lezione-3-7.html">3.7 - Componenti Avanzati</a></li>
                 <li><a href="/lezione-3/lezione-3-8.html">3.8 - Customizzazione Bootstrap</a></li>
-                <li><a href="/lezione-3/lezione-3-99.html">3.99 - Progetto Completo (Landing Page)</a></li>
+                <li><a href="/lezione-3/lezione-3-99.html">Pagina di esempio</a></li>
             </ul>
         </div>
 
