--- a/public/lezione-3/esempi/componenti-avanzati.html
+++ b/public/lezione-3/esempi/componenti-avanzati.html
@@ -221,7 +221,7 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="https://via.placeholder.com/1200x400/667eea/ffffff?text=First+Slide" 
+                        <img src="suricata_1.jpeg" 
                              class="d-block w-100" alt="First slide">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>First Slide</h5>
@@ -229,7 +229,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="https://via.placeholder.com/1200x400/764ba2/ffffff?text=Second+Slide" 
+                        <img src="suricata_2.jpeg" 
                              class="d-block w-100" alt="Second slide">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Second Slide</h5>
@@ -237,7 +237,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="https://via.placeholder.com/1200x400/f093fb/ffffff?text=Third+Slide" 
+                        <img src="suricata_3.jpeg" 
                              class="d-block w-100" alt="Third slide">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Third Slide</h5>
