--- a/public/lezione-3/lezione-3-8.html
+++ b/public/lezione-3/lezione-3-8.html
@@ -577,31 +577,9 @@ h1, h2, h3, h4, h5, h6 {
             <p><strong>✗ Evita:</strong></p>
             <ul>
                 <li>Non modificare direttamente bootstrap.min.css</li>
-                <li>Non abusare di !important (segno di problemi di specificity)</li>
+                <li>Non abusare di !important</li>
                 <li>Non sovrascrivere troppe classi (meglio estendere)</li>
                 <li>Non ignorare il responsive design nelle personalizzazioni</li>
-                <li>Non usare colori senza controllare il contrasto (WCAG)</li>
-                <li>Non creare troppi file CSS - organizza bene</li>
-            </ul>
-        </div>
-
-        <h2>8. Strumenti Utili</h2>
-        
-        <div class="teoria">
-            <p><strong>Tools per customizzazione Bootstrap:</strong></p>
-            <ul>
-                <li><strong>Bootstrap Customizer:</strong> Tool ufficiale per personalizzare Bootstrap</li>
-                <li><strong>Themestr.app:</strong> Editor visuale per temi Bootstrap</li>
-                <li><strong>Bootstrap Build:</strong> Servizio per compilare Bootstrap custom</li>
-                <li><strong>ColorZilla:</strong> Estensione browser per color picking</li>
-                <li><strong>Chrome DevTools:</strong> Inspector per testare modifiche live</li>
-            </ul>
-            
-            <p><strong>Risorse:</strong></p>
-            <ul>
-                <li>Bootstrap Documentation: <code>getbootstrap.com/docs</code></li>
-                <li>Bootstrap Themes: <code>themes.getbootstrap.com</code></li>
-                <li>Bootswatch: Temi gratuiti per Bootstrap</li>
             </ul>
         </div>
 
