--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,23 @@
         </div>
 
         <div class="teoria">
+            <h3>Lezione 4 - SASS/SCSS</h3>
+            <p>Preprocessore CSS per codice più potente e organizzato</p>
+            <ul>
+                <li><a href="/lezione-4/index.html">Introduzione alla Lezione 4</a></li>
+                <li><a href="/lezione-4/lezione-4-1.html">4.1 - Introduzione e Setup SASS</a></li>
+                <li><a href="/lezione-4/lezione-4-2.html">4.2 - Variabili</a></li>
+                <li><a href="/lezione-4/lezione-4-3.html">4.3 - Nesting e Parent Selector</a></li>
+                <li><a href="/lezione-4/lezione-4-4.html">4.4 - Partials e Import</a></li>
+                <li><a href="/lezione-4/lezione-4-5.html">4.5 - Mixins e Functions</a></li>
+                <li><a href="/lezione-4/lezione-4-6.html">4.6 - Extend e Placeholder</a></li>
+                <li><a href="/lezione-4/lezione-4-7.html">4.7 - Control Directives</a></li>
+                <li><a href="/lezione-4/lezione-4-8.html">4.8 - SASS Avanzato e Best Practices</a></li>
+                <li><a href="/lezione-4/lezione-4-99.html">Progetto Finale: Dashboard Moderna</a></li>
+            </ul>
+        </div>
+
+        <div class="teoria">
             <h3>Risorse</h3>
             <ul>
                 <li><a href="/link-utili.html">Link Utili</a></li>
