--- a/public/link-utili.html
+++ b/public/link-utili.html
@@ -67,6 +67,22 @@
             <li><a href="https://bootswatch.com/" target="_blank">Bootswatch - Free Themes</a> - Temi gratuiti per Bootstrap</li>
         </ul>
 
+        <h2>Risorse SASS/SCSS (Lezione 4)</h2>
+
+        <h3>Documentazione SASS</h3>
+        <ul>
+            <li><a href="https://sass-lang.com/" target="_blank">SASS Official Website</a> - Sito ufficiale SASS</li>
+            <li><a href="https://sass-lang.com/documentation" target="_blank">SASS Documentation</a> - Documentazione completa</li>
+            <li><a href="https://sass-lang.com/guide" target="_blank">SASS Guide</a> - Guida introduttiva ufficiale</li>
+        </ul>
+
+        <h3>Risorse e Guide SASS</h3>
+        <ul>
+            <li><a href="https://github.com/KittyGiraudel/sass-guidelines" target="_blank">SASS Guidelines</a> - Best practices per scrivere SASS</li>
+            <li><a href="https://www.sassmeister.com/" target="_blank">SassMeister</a> - Playground online per testare SASS</li>
+            <li><a href="https://sass-guidelin.es/" target="_blank">Sass Guidelines</a> - Guida completa alle convenzioni SASS</li>
+        </ul>
+
         <h2>Risorse Generali</h2>
 
         <h3>Documentazione e Reference</h3>
